# slam_walking_robot

./: .gitignore  README.md  SIM_WORLD_CHANGELOG_BILINGUAL.md  commands  fix-nomachine-hdmi.sh
arduino/: NAV_BRIDGE_GUIDE.md  old.ino  upload.sh
arduino/calibrate/: calibrate.ino
arduino/motor_diag/: motor_diag.ino
arduino/motor_test/: motor_test.ino
arduino/rotation_test/: rotation_test.ino
arduino/test/: test.ino  test.ino.bak
arduino/test_hybrid/: test_hybrid.ino
maps/: my_map.pgm  my_map.yaml
scripts/: auto_commit.sh  calibrate.py  loop_chain_stream.py  nav_loop_monitor.py  run_maze_3terminals.sh
simulation/maps/: my_room.pgm  my_room.yaml
simulation/scripts/: auto_commit.sh  run_maze_localization.sh
src/slamwalker_bridge/: package.xml  setup.cfg  setup.py
src/slamwalker_bridge/slamwalker_bridge/: serial_bridge_node.py  teleop_node.py
src/slamwalker_bringup/: CMakeLists.txt  package.xml
src/slamwalker_bringup/config/: nav.rviz  nav2_real.yaml  slam.rviz  slam_toolbox.yaml
src/slamwalker_bringup/launch/: slamwalker_nav.launch.py  slamwalker_slam.launch.py
src/slamwalker_bringup/urdf/: slamwalker.urdf.xacro
